Changes to fix price list selection change

--- a/Presentation/Nop.Web/Areas/Admin/Views/Product/List.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Product/List.cshtml
@@ -76,28 +76,28 @@
                     </button>
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <button type="submit" name="use-price-1" id="use-price-1">
+                            <button name="use-price-1" id="use-price-1" asp-action="UsePrice1">
                                 <i class="fa fa-money"></i>
                                 @T("Admin.Common.Price1")
                             </button>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <button type="button" name="use-price-2" id="use-price-2">
+                            <button name="use-price-2" id="use-price-2" asp-action="UsePrice2">
                                 <i class="fa fa-money"></i>
                                 @T("Admin.Common.Price2")
                             </button>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <button type="submit" name="use-price-3" id="use-price-3">
+                            <button name="use-price-3" id="use-price-3" asp-action="UsePrice3">
                                 <i class="fa fa-money"></i>
                                 @T("Admin.Common.Price3")
                             </button>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <button type="button" name="use-price-4" id="use-price-4">
+                            <button name="use-price-4" id="use-price-4" asp-action="UsePrice4">
                                 <i class="fa fa-money"></i>
                                 @T("Admin.Common.Price4")
                             </button>
